--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -339,8 +339,6 @@ astro-island button {
   flex-direction: column;
   justify-content: left;
 }
-.resources td > div {
-}
 
 .ibc-channels {
   grid-template-columns: repeat(3, minmax(0, 1fr));
